# Horizon-Browser

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  FINAL_SUMMARY.md  IMPLEMENTATION_NOTES_UI_V001.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PROJECT_SUMMARY.md  README.md  SECURITY_SUMMARY.md  SECURITY_SUMMARY_UPDATE.md
.github/: dependabot.yml
.github/workflows/: ci.yml  lint.yml
assets/icons/: README.md
assets/themes/dark/: theme.json
assets/themes/light/: theme.json
docs/: BUILD.md  DEVELOPMENT.md  FEATURES.md  IMPLEMENTATION_SUMMARY.md  SETTINGS.md  SHORTCUTS.md  UI_DESIGN_V001.md  UI_GUIDE.md
docs/api/: README.md
docs/architecture/: README.md
engine/: Cargo.toml
engine/src/: lib.rs  renderer.rs  view.rs
extensions/: Cargo.toml
extensions/src/: lib.rs  loader.rs  manifest.rs  registry.rs
launcher/: Cargo.toml
launcher/src/: app.rs  main.rs
networking/: Cargo.toml
networking/src/: client.rs  dns.rs  lib.rs  request.rs  response.rs  speedtest.rs  vpn.rs
sandbox/: Cargo.toml
sandbox/src/: isolation.rs  lib.rs  policy.rs
storage/: Cargo.toml
storage/src/: lib.rs  passwords.rs  profile.rs  secure.rs  settings.rs  userdata.rs
ui/: Cargo.toml
ui/src/: lib.rs  settings.rs  sidebar.rs  tabs.rs  theme.rs  window.rs
